--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "tstolua -j"
   },
   "author": "Sidoine De Wispelaere",
   "license": "MIT",
   "dependencies": {
     "@wowts/lua": "^1.0.3"
+  },
+  "devDependencies": {
+    "@wowts/tstolua": "^1.0.2"
   }
 }
