--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "tstolua -j"
+    "prepare": "tstolua -j"
   },
   "author": "Sidoine De Wispelaere",
   "license": "MIT",
