--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "tstolua -j"
+    "prepare": "tstolua -j",
+    "watch": "tstolua -w -j"
   },
   "author": "Sidoine De Wispelaere",
   "license": "MIT",
   "dependencies": {
-    "@wowts/lua": "^1.0.3"
+    "@wowts/lua": "^1.3.0"
   },
   "devDependencies": {
-    "@wowts/tstolua": "^1.0.2"
+    "@wowts/tstolua": "^1.4.0"
   }
 }
